# rta-compute

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  VERSIONING.md  pyproject.toml
.github/workflows/: ci.yml
app/: main.py  schemas.py  version.py
app/api/: routes.py
app/astro/: context.py  dasha.py  gochara.py  instant.py  panchanga.py  rectify.py  vargas.py
app/atlas/: build_atlas.py  search.py
app/sky/: __init__.py  asterisms.py  build_sky.py  catalog.py  figures.py  positions.py
data/sky/: DATA-LICENSES.md
scripts/: fetch_sky_data.sh
tests/: test_atlas.py  test_compute.py  test_rectify.py  test_sky.py  test_vara.py  test_version.py
